[gd_scene load_steps=20 format=2]

[ext_resource path="res://Wires.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0, 1, 1, 1 )
emission_enabled = true
emission = Color( 0, 1, 1, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0, 1, 1, 0.0627451 )
emission_enabled = true
emission = Color( 0, 1, 1, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CylinderMesh" id=6]
material = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="PrismMesh" id=8]
material = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=12]
material = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0, 0, 1, 1 )
emission_enabled = true
emission = Color( 0, 0, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=14]
material = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=15]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="CubeMesh" id=16]
resource_local_to_scene = true
material = SubResource( 15 )

[sub_resource type="Animation" id=17]
resource_name = "Selected"
tracks/0/type = "value"
tracks/0/path = NodePath("Box:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Box:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 4.6, 1, 4.6 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Unselected"
tracks/0/type = "value"
tracks/0/path = NodePath("Box:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Box:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 4.6, 0, 4.6 ) ]
}

[node name="Wires" type="Spatial"]
script = ExtResource( 1 )

[node name="Committed" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
material_override = SubResource( 1 )

[node name="PosZ" type="CSGBox" parent="Committed"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 2.5 )
width = 0.5
height = 0.1
depth = 5.0

[node name="NegZ" type="CSGBox" parent="Committed"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -2.5 )
width = 0.5
height = 0.1
depth = 5.0

[node name="PosX" type="CSGBox" parent="Committed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 2.5, 0.05, 0 )
width = 0.5
height = 0.1
depth = 5.0

[node name="NegX" type="CSGBox" parent="Committed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -2.5, 0.05, 0 )
width = 0.5
height = 0.1
depth = 5.0

[node name="Hub" type="CSGBox" parent="Committed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.05, 0 )
width = 0.5
height = 0.1
depth = 0.5

[node name="Proposed" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
material_override = SubResource( 2 )

[node name="PosZ" type="CSGBox" parent="Proposed"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 2.5 )
width = 0.5
height = 0.1
depth = 5.0

[node name="NegZ" type="CSGBox" parent="Proposed"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -2.5 )
width = 0.5
height = 0.1
depth = 5.0

[node name="PosX" type="CSGBox" parent="Proposed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 2.50582, 0.0499997, 0.0035677 )
width = 0.5
height = 0.1
depth = 5.0

[node name="NegX" type="CSGBox" parent="Proposed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -2.5, 0.05, 0 )
width = 0.5
height = 0.1
depth = 5.0

[node name="Hub" type="CSGBox" parent="Proposed"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.05, 0 )
width = 0.5
height = 0.1
depth = 0.5

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.05626, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="Cylinder" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.05771, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="Prism" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.05771, 0 )
visible = false
mesh = SubResource( 8 )
material/0 = null

[node name="Sphere" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.05771, 0 )
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="OpenSwitch" type="MeshInstance" parent="."]
transform = Transform( 0.397275, 0, 0, 0, 0.111837, 0, 0, 0, 0.397275, 0, -4.89701, 0 )
mesh = SubResource( 12 )
material/0 = null

[node name="ClosedSwitch" type="MeshInstance" parent="."]
transform = Transform( 0.397275, 0, 0, 0, 0.111837, 0, 0, 0, 0.397275, 0, -4.89701, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="MountPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.96217, 0 )

[node name="Selection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )

[node name="Box" type="MeshInstance" parent="Selection"]
transform = Transform( 4.6, 0, 0, 0, 1, 0, 0, 0, 4.6, 0, 1, 0 )
mesh = SubResource( 16 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Selection"]
playback_default_blend_time = 0.2
anims/Selected = SubResource( 17 )
anims/Unselected = SubResource( 18 )
